# MapStack

./: .env.example  .gitignore  README.md  create_minio_document.py  docker-compose.yml  mapstack_spec.md  openapi-implementation-roadmap.md  package-lock.json  package.json  roadmap-data-model.md
.cursor/: settings.json
.cursor/rules/backend/: api.mdc  python.mdc  service.mdc  testing.mdc
.cursor/rules/common/: architecture.mdc  code_style.mdc  naming.mdc  principles.mdc
.cursor/rules/database/: general.mdc  migration.mdc  query.mdc  (+3 more)
backend/: .gitignore  Dockerfile  alembic.ini  cli.py  debug_document.py  list_documents.py  openapi.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_roadmap_tables.py  002_add_document_revision_tables.py
backend/app/: main.py
backend/src/: main.py
backend/src/api/v1/: __init__.py
backend/src/api/v1/endpoints/: documents.py  roadmaps.py
backend/src/api/v1/schemas/: __init__.py  common.py  document.py  roadmap.py
backend/src/config/: database.py  settings.py
backend/src/db/: base.py  main.py  types.py
backend/src/db/models/: __init__.py  document.py  roadmap.py
backend/src/db/schemas/: __init__.py  document.py  roadmap.py
backend/src/db/seeders/: __init__.py  document_content.py  document_seed.py  roadmap_seed.py  run_seeds.py
backend/src/db/seeders/datas/: __init__.py  categories.py  document_samples.py  frontend_roadmap.py  react_roadmap.py  themes.py
backend/src/services/: __init__.py  document.py  exceptions.py  roadmap.py  storage.py
backend/src/utils/: __init__.py  logger.py
backend/tests/: __init__.py  conftest.py  test_document_service.py
backend/tests/api/v1/: test_documents.py
backend/tests/services/: test_document.py  test_document_diff_utility.py  test_storage.py  test_version_utility.py
docs/development/: development_guide.md
docs/planning/: architecture.md  content_revision_implementation_plan.md  content_revision_strategy.md  data_model.md  monorepo_setup.md  project_overview.md  requirements.md  tech_stack.md
docs/progress/: project_status.md
frontend/: .eslintrc.json  .gitignore  next.config.js  orval.config.js  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
(+224 files in other folders)
